--- a/content/2016.08.fin.de.l.appel.rst
+++ b/content/2016.08.fin.de.l.appel.rst
@@ -4,13 +4,13 @@ Fin de l'appel à conférences, ateliers et sprints
 :slug: fin-de-l-appel-a-conferences
 :lang: fr
 :date: 2016-08-04
-:og_url: https://2016.pycon.fr/fin-de-l-appel-a-conferences.html
+:og_url: https://www.pycon.fr/2016/fin-de-l-appel-a-conferences.html
 :og_type: website
 :og_title: Plus de 93 propositions de conférences après l'appel à orat·eur·rice·s - PyCon-fr
 :og_description:  L'appel à conférence lancé fin juin et maintenant terminé.
 :og_image: images/og_image.png
 
-L'`appel à conférences et ateliers <https://2016.pycon.fr/appel-a-conferences-et-ateliers.html>`_
+L'`appel à conférences et ateliers <https://www.pycon.fr/2016/appel-a-conferences-et-ateliers.html>`_
 lancé fin juin s'est terminé hier.
 
 Nous tenons à remercier toutes les personnes qui ont proposé une conférence.
@@ -23,6 +23,6 @@ comprendra 42 conférences courtes et 18 conférences longues.
 
 Les conférences non retenues pourront faire l'objet de lightning talks.
 
-Si vous n'avez jamais fait de présentation en public, `nous pouvons vous mettre en relation avec un tut·eur·rice <https://2016.pycon.fr/aide-pour-travailler-sur-vos-conferences.html>`_ ! Si vous êtes intéressé·e pour bénéficier d'un tutorat, ou pour tutorer quelqu'un, envoyez un email à contact@pycon.fr.
+Si vous n'avez jamais fait de présentation en public, `nous pouvons vous mettre en relation avec un tut·eur·rice <https://www.pycon.fr/2016/aide-pour-travailler-sur-vos-conferences.html>`_ ! Si vous êtes intéressé·e pour bénéficier d'un tutorat, ou pour tutorer quelqu'un, envoyez un email à contact@pycon.fr.
 
 Rendez-vous à la fin du mois d'Août pour le programme et les pré-inscriptions.
